--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WHAT IS DEEP DREAM??</title>
     <link rel="stylesheet" href="css/main.css">
-    <!-- Don't need CSS reset, foundation uses normalize.css -->
+    <!-- ANIMATE.CSS library -->
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
+    <!-- WAYPOINTS library -->
+    <script src="node_modules/waypoints/lib/noframework.waypoints.min.js"></script>
   </head>
 
 <body>
@@ -18,7 +21,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		 viewBox="0 0 1550 2400" style="enable-background:new 0 0 1550 2400;" xml:space="preserve">
+		 viewBox="0 0 1550 2400" style="enable-background:new 0 0 1550 2400;" xml:space="preserve" id="thing">
 	<style type="text/css">
 		.st0{fill:#4D4D4D;}
 		.st1{fill:none;stroke:#1EBFDD;stroke-width:4;stroke-miterlimit:10;}
@@ -3769,7 +3772,6 @@
 		</g>
 	</g>
 	</svg>
-
 
 
 <script src="js/main.js"></script>
