--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		 viewBox="0 0 1550 2400" style="enable-background:new 0 0 1550 2400;" xml:space="preserve" id="thing">
+		 viewBox="0 0 1550 2400" style="enable-background:new 0 0 1550 2400;" xml:space="preserve" id="thing" class="animated fadeIn">
 	<style type="text/css">
 		.st0{fill:#4D4D4D;}
 		.st1{fill:none;stroke:#1EBFDD;stroke-width:4;stroke-miterlimit:10;}
@@ -484,7 +484,7 @@
 		</g>
 	</g>
 	<g id="timeline">
-		<g id="graphic">
+		<g id="graphic" class="animated">
 			<g id="trailoff">
 				<line class="st1" x1="1331.3" y1="1988.1" x2="1401.7" y2="1988.1"/>
 				<line class="st1" x1="1416" y1="1988.1" x2="1445" y2="1988.1"/>
@@ -3772,6 +3772,10 @@
 		</g>
 	</g>
 	</svg>
+
+	<div>
+		<p id="page_bottom">.</p>
+	</div>
 
 
 <script src="js/main.js"></script>
